--- a/public/pages/CSS/style-main.css
+++ b/public/pages/CSS/style-main.css
@@ -42,17 +42,14 @@
 }
 
 .tenmon h2 {
-    padding: 5px;
-    margin-left: 10px;
+    padding: 7px 0 7px 25px;
+    margin: 0;
 }
 
 .gamezone {
-    width: 85%;
     padding: 50px;
     border-radius: 0px 10px 10px 10px;
     background-color: antiquewhite;
-    margin-top: -20px;
-    margin-left: 50px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -64,14 +61,9 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 200px;
     text-align: center;
-}
-
-.game-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
+    transition: 0.3s;
+    height: 100%;
 }
 
 .game-card h3 {
@@ -84,6 +76,89 @@
     color: #666;
 }
 
-.game-card:hover {
-    transform: scale(1.2);
+.game-card button {
+    border-radius: 20px;
+    color: #fff;
+    background-color: #ad11939e;
+    border: none;
+    padding: 5px 15px;
+}
+
+.game-card:hover{
+    transform: scale(1.03);
+}
+
+.c-img {
+    display: block;
+    position: relative;
+    padding-top: 20%; }
+    .c-img img, .c-img .bg {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: inherit; }
+
+.category-class-list li,
+.category-type-list li {
+    list-style: none;
+    position: relative;
+    padding: 13px 0 13px 60px;
+    margin-bottom: 10px;
+}
+
+.category-class-list li:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background: url('../Photo/ngoisao.png') no-repeat;
+    background-size: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+.category-type-list li:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 7.5px;
+    width: 35px;
+    height: 35px;
+}
+
+.category-class-list li:before {
+    background: url('../Photo/ngoisao.png') no-repeat;
+    background-size: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+.category-type-list li:nth-child(1)::before {
+    background: url('../Photo/toan.png') no-repeat;
+    background-size: 100%;
+}
+.category-type-list li:nth-child(2)::before {
+    background: url('../Photo/vietanh.png') no-repeat;
+    background-size: 100%;
+}
+.category-type-list li:nth-child(3)::before {
+    background: url('../Photo/vietanh.png') no-repeat;
+    background-size: 100%;
+}
+.category-type-list li:nth-child(4)::before {
+    background: url('../Photo/tunhien.png') no-repeat;
+    background-size: 100%;
+}
+.category-type-list li:nth-child(5)::before {
+    background: url('../Photo/lichsu.png') no-repeat;
+    background-size: 100%;
+}
+.category-type-list li:nth-child(6)::before {
+    background: url('../Photo/dialy.png') no-repeat;
+    background-size: 100%;
 }
